--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jifty (0.70116-1) unstable; urgency=low
+
+  * New cpan release
+
+ -- AGOSTINI Yves <agostini@univ-metz.fr>  Wed, 17 Jan 2007 08:46:31 +0100
+
 jifty (0.61123-1) unstable; urgency=low
 
   * New cpan release 
