January 17 release. dependency fixing
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2517 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Jifty 0.70117
+   Dependencies: 
+     * Bumped the minimum required version of Jifty::DBI to 0.30
+
 Jifty 0.70116
 
    New authors
