--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jifty (0.70117-1) unstable; urgency=low
+
+  * New cpan release
+
+ -- AGOSTINI Yves <agostini@univ-metz.fr>  Thu, 18 Jan 2007 08:52:53 +0100
+
 jifty (0.70116-1) unstable; urgency=low
 
   * New cpan release
