Added myself to AUTHORS.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2529 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -21,3 +21,4 @@ Edmund von der Burg <evdb@ecclestoad.co.uk>
 Yves Agostini <agostini@univ-metz.fr>
 Agent Zhang <agentzh@gmail.com>
 Pawel Murias <pmurias@woobling.org>
+Andrew Sterling Hanenkamp <sterling@hanenkamp.com>
