[I18N] * fixed the _(s, ...) syntax in pony * updated po/*.po accordingly * changed fr.po to UTF-8 for consistency * added missing entries to zh_tw.po (yes, audreyt, i'm   using traditional chinese this time. :)) * changed some entries in zh_cn.po.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2546 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/po/en.po
+++ b/share/po/en.po
@@ -207,7 +207,8 @@ msgid "Loading..."
 msgstr ""
 
 #: share/web/templates/__jifty/admin/model/dhandler:9
-msgid "Manage $object_type records"
+#. ($object_type)
+msgid "Manage %1 records"
 msgstr ""
 
 #: share/web/templates/__jifty/admin/model/dhandler:11
