--- a/share/po/zh_tw.po
+++ b/share/po/zh_tw.po
@@ -173,7 +173,7 @@ msgstr "關閉"
 
 #: share/web/templates/__jifty/admin/index.html:28 share/web/templates/__jifty/admin/model/dhandler:20
 msgid "Done?"
-msgstr ""
+msgstr "已完成？"
 
 #: share/web/templates/__jifty/admin/fragments/list/view:40
 msgid "Edit"
@@ -195,7 +195,7 @@ msgstr "%1 您好."
 
 #: share/web/templates/__jifty/admin/index.html:1
 msgid "Jifty Administrative Console"
-msgstr ""
+msgstr "Jifty 管理介面"
 
 #: share/web/templates/__jifty/online_docs/toc.html:6
 msgid "Jifty Developer Documentation Online"
@@ -210,12 +210,13 @@ msgid "Loading..."
 msgstr "請稍候..."
 
 #: share/web/templates/__jifty/admin/model/dhandler:9
-msgid "Manage $object_type records"
-msgstr ""
+#. ($object_type)
+msgid "Manage %1 records"
+msgstr "管理 %1 記錄"
 
 #: share/web/templates/__jifty/admin/model/dhandler:11
 msgid "Manage records:"
-msgstr ""
+msgstr "管理記錄："
 
 #: share/web/templates/__jifty/error/mason_internal_error:1
 msgid "Mason error"
@@ -235,7 +236,7 @@ msgstr "沒有欄位包含"
 
 #: share/web/templates/__jifty/admin/fragments/list/list:85
 msgid "No items found"
-msgstr ""
+msgstr "未找到記錄"
 
 #: lib/Jifty/Web.pm:299
 msgid "No request to handle"
@@ -349,8 +350,8 @@ msgstr "您目前尚未登入."
 
 #: share/web/templates/__jifty/admin/fragments/list/header:22
 msgid "asc"
-msgstr ""
+msgstr "昇冪"
 
 #: share/web/templates/__jifty/admin/fragments/list/header:41
 msgid "desc"
-msgstr ""
+msgstr "降冪"
