[share/po/fr.po] - oops, forgot to update the CHARSET header...
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2549 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/po/fr.po
+++ b/share/po/fr.po
@@ -12,7 +12,7 @@ msgstr ""
 "Last-Translator: AGOSTINI Yves <agostini@univ-metz.fr>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO8859-15\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: lib/Jifty/Action/Record/Search.pm:125
